2009-04-16  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/openvas_server.h, libopenvas/openvas_server.c
	(openvas_server_connect_to_server): Renamed to openvas_server_open.
	(openvas_server_close_server_connection): Renamed to openvas_server_close.
	(openvas_server_send_to_server): Renamed to openvas_server_send.
	(openvas_server_sendf_to_server): Renamed to openvas_server_sendf.

2009-04-15  Michael Wiegand <michael.wiegand@intevation.de>

	* libopenvas/openvas_server.c: Made function names more intuitive,
	removed superfluous newlines from log messages, added a little
	documentation.

	* libopenvas/openvas_server.h: Made function names more intuitive,
	removed superfluous include.

2009-04-14  Michael Wiegand <michael.wiegand@intevation.de>

	Added a new library for GnuTLS based communication, based on work done
	by Matthew Mundell for the openvas-manager module.

	* libopenvas/openvas_server.c: New. Contains an initial set of function
	for GnuTLS based communication.

	* libopenvas/openvas_server.h: New. Header file for the new
	functionality.

	* libopenvas/Makefile: Updated.

	* Makefile: Updated.

	* MANIFEST: Updated.

2009-04-02  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/plugutils.c (mark_post): Fixed a probably unintended
	change in r2958 by Felix.

2009-04-01  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Corrected search path for signature files when comparing their
	timestamps in store module.
	Declared two parameter of store_load_plugin as const.

	* libopenvas/store.c, libopenvas/store.h (store_load_plugin): Made
	parameters const, corrected search path for .asc (signature) files. Was
	cache dir, now is same dir as plugin.

2009-04-01  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Corrected checks when loading plugins from cache, extended
	documentation, removed debug printf.

	* libopenvas/store.c (store_load_plugin): Corrected checks and doc.
