@@ -1,5 +1,15 @@
 2009-04-16  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>
 
+	* libopenvas/network.c: Removed any code path for conditional
+	NESSUS_CNX_LOCK. This was a "Quick & dirty patch to run Nessus
+	from behind a picky firewall (e.g. FW/1 and his 'Rule 0'): Nessus
+	will never open more than 1 connection at a time."
+	It appears to be deseperately outdated and never used.
+	OpenVAS allows to configure the number of concurrent checks,
+	so this should be the way to go in case of firewall-based problems.
+
+2009-04-16  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>
+
 	* libopenvas/openvas_server.h, libopenvas/openvas_server.c
 	(openvas_server_connect_to_server): Renamed to openvas_server_open.
 	(openvas_server_close_server_connection): Renamed to openvas_server_close.
